updated project 5. completed section one.

--- a/section_1/design_matrix_batching.ipynb
+++ b/section_1/design_matrix_batching.ipynb
@@ -24,10 +24,8 @@
     "This project shows:\n",
     "\n",
     "- Why ML always uses a matrix\n",
-    "- how OLS is literally a matrix equation\n",
     "- how neural networks generalize it\n",
-    "- how batching is just slicing rows of 𝑋\n",
-    "- how shapes flow through the entire system"
+    "- how this simplifies the system"
    ]
   },
   {
@@ -64,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "77e87d52",
    "metadata": {},
    "outputs": [
@@ -77,7 +75,7 @@
        " (3, 2))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "3fdd84a8",
    "metadata": {},
    "outputs": [
@@ -123,7 +121,7 @@
        "2.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "8cfee50b",
    "metadata": {},
    "outputs": [
@@ -157,7 +155,7 @@
        "np.float64(2.5)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "b61f3e1f",
    "metadata": {},
    "outputs": [
@@ -196,7 +194,7 @@
        "       [4.5]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "d1c3c8e6",
    "metadata": {},
    "outputs": [
@@ -245,7 +243,7 @@
        "       [0.98901306]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +262,7 @@
    "id": "7a673c4e",
    "metadata": {},
    "source": [
-    "### …we can finally show the big idea:\n",
+    "### …we can finally see the big idea:\n",
     "\n",
     "## A neural network layer is just a generalization of\n",
     "\n",
@@ -285,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "91e0cdc9",
    "metadata": {},
    "outputs": [
@@ -298,7 +296,7 @@
        " (3, 3))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "8c3f1864",
    "metadata": {},
    "outputs": [
@@ -337,7 +335,7 @@
        "       [0.99969655, 0.99888746, 0.00202532]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,32 +357,33 @@
     "I have a kaggle not book of this that uses US housing prices dataset.\n",
     "We’ll build a design matrix from these.\n",
     "\n",
-    "Load the dataset"
+    "Load the dataset EX: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "62693100",
+   "execution_count": 8,
+   "id": "be79acdd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nimport pandas as pd\\n\\ndf = pd.read_csv(\"house_prices.csv\")\\ndf.head()\\n\\nfeatures = [\"sqft_living\", \"bedrooms\", \"bathrooms\"]\\ntarget = \"price\"\\n\\nX = df[features].values  # shape (n, d)\\ny = df[target].values.reshape(-1, 1)\\nX.shape, y.shape\\n\\n# Now that we have a design matrix **X** from the dataset\\n# This is how a neural network layer would consume it\\n\\n\\nn, d = X.shape      # n = number of examples, d = number of features\\nh = 3               # number of outputs (like 3 neurons in a layer)\\n\\n# Random weight initialization\\nW = np.random.randn(d, h) * np.sqrt(2.0 / d)\\n\\n# Bias vector\\nb = np.zeros(h)\\n\\nW.shape, b.shape\\n\\nZ = X @ W + b\\nZ[:5], Z.shape\\n\\ndef relu(z):\\n    return np.maximum(0, z)\\n\\nA = relu(Z)\\nA[:5]\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'''TODO create a file to create a dataset for the github repo version\n",
-    "\n",
+    "'''\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv(\"house_prices.csv\")\n",
-    "df.head()'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be79acdd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
+    "df.head()\n",
+    "\n",
     "features = [\"sqft_living\", \"bedrooms\", \"bathrooms\"]\n",
     "target = \"price\"\n",
     "\n",
@@ -392,34 +391,30 @@
     "y = df[target].values.reshape(-1, 1)\n",
     "X.shape, y.shape\n",
     "\n",
-    "# add a bias column for ols\n",
-    "X_ols = np.column_stack([np.ones(len(X)), X])\n",
-    "X_ols.shape\n",
+    "# Now that we have a design matrix **X** from the dataset\n",
+    "# This is how a neural network layer would consume it\n",
     "\n",
-    "#ols solution\n",
-    "beta = np.linalg.inv(X_ols.T @ X_ols) @ (X_ols.T @ y)\n",
-    "beta\n",
     "\n",
-    "# predictions\n",
-    "y_hat = X_ols @ beta\n",
-    "y_hat[:5]\n",
+    "n, d = X.shape      # n = number of examples, d = number of features\n",
+    "h = 3               # number of outputs (like 3 neurons in a layer)\n",
     "\n",
+    "# Random weight initialization\n",
+    "W = np.random.randn(d, h) * np.sqrt(2.0 / d)\n",
+    "\n",
+    "# Bias vector\n",
+    "b = np.zeros(h)\n",
+    "\n",
+    "W.shape, b.shape\n",
+    "\n",
+    "Z = X @ W + b\n",
+    "Z[:5], Z.shape\n",
+    "\n",
+    "def relu(z):\n",
+    "    return np.maximum(0, z)\n",
+    "\n",
+    "A = relu(Z)\n",
+    "A[:5]\n",
     "'''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e58fe2ba",
-   "metadata": {},
-   "source": [
-    "## This is the exact same structure as:\n",
-    "\n",
-    "- linear regression\n",
-    "- logistic regression\n",
-    "- neural network layers\n",
-    "- Everything is built on:\n",
-    "\n",
-    "𝑋𝑊 + 𝑏"
    ]
   },
   {
@@ -452,7 +447,28 @@
     "- transformers\n",
     "- everything\n",
     "\n",
-    "This project completes your first‑principles foundation."
+    "## This project completes your first‑principles foundation.\n",
+    "\n",
+    "**Preparing for Project 6**\n",
+    "\n",
+    "Now that you’ve seen:\n",
+    "\n",
+    "- how X is built\n",
+    "- how W and b are shaped\n",
+    "- how XW + b works\n",
+    "- how an activation is applied\n",
+    "\n",
+    "…you’re ready for the next project.\n",
+    "\n",
+    "## In Section 2 - Project 6, you will replace this manual W and b with a real DenseLayer class that:\n",
+    "\n",
+    "- initializes weights\n",
+    "- stores biases\n",
+    "- performs forward passes\n",
+    "- computes gradients\n",
+    "- updates parameters through backpropagation\n",
+    "\n",
+    "And the design matrix X you built here will plug directly into that class."
    ]
   }
  ],
