finished all of section one and finished neural network class project 6

--- a/section_1/design_matrix_batching.ipynb
+++ b/section_1/design_matrix_batching.ipynb
@@ -57,7 +57,7 @@
     "- X has n rows (one per data point)\n",
     "- X has d columns (one per feature)\n",
     "\n",
-    "![image](mathmatic/matrix_shape.jpg)"
+    "![image](mathematics/matrix_shape.jpg)"
    ]
   },
   {
