--- a/section_1/linear_regression_math.ipynb
+++ b/section_1/linear_regression_math.ipynb
@@ -19,7 +19,7 @@
     "\n",
     " find the best‑fit line that predicts y from x.\n",
     "\n",
-    "![image](mathmatic/3_forms.jpg)"
+    "![image](mathematics/3_forms.jpg)"
    ]
   },
   {
@@ -137,7 +137,7 @@
     "4. Compute gradients — how much the loss changes if you nudge m or c\n",
     "5. Update parameters:\n",
     "\n",
-    "![image](mathmatic/optimizatiion.jpg)\n"
+    "![image](mathematics/optimizatiion.jpg)\n"
    ]
   },
   {
@@ -203,7 +203,7 @@
     "## Convert Back to Real Units\n",
     "**Because we trained on normalized x:**\n",
     "\n",
-    "![image](mathmatic\\real_slop.jpg)"
+    "![image](mathematics/real_slop.jpg)"
    ]
   },
   {
@@ -272,7 +272,7 @@
     "\n",
     "**The projection formula gives the exact solution in one step:**\n",
     "\n",
-    "![projection](mathmatic/matrix_form_ols.jpg)\n",
+    "![projection](mathematics/matrix_form_ols.jpg)\n",
     "\n",
     "This is the exact solution gradient descent is trying to reach."
    ]
@@ -338,7 +338,7 @@
     "- no optimization\n",
     "-  just arithmetic\n",
     "\n",
-    "![projection](mathmatic/algebraic_form.jpg)"
+    "![projection](mathematics/algebraic_form.jpg)"
    ]
   },
   {
@@ -413,12 +413,6 @@
     "- MSE is the squared length of the residual vector.\n",
     "- Gradient descent and projection converge to the same line.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e2a2f364",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
