updated layers and test added pytorch_test

--- a/pytorch_test.ipynb
+++ b/pytorch_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 249,
    "id": "945d4899",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 250,
    "id": "39ed41f0",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 257,
    "id": "ad9a70d8",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,12 @@
       "    (1): ReLU()\n",
       "    (2): Linear(in_features=3, out_features=1, bias=True)\n",
       "  )\n",
-      ")\n"
+      ")\n",
+      "\n",
+      "tensor([[0.3828],\n",
+      "        [0.3963],\n",
+      "        [0.5611],\n",
+      "        [0.5774]], grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
@@ -128,12 +133,14 @@
     "    \n",
     "\n",
     "model = XORNet_simple()\n",
-    "print(model)\n"
+    "print(model)\n",
+    "print()\n",
+    "print(model(X))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 258,
    "id": "a7e32584",
    "metadata": {},
    "outputs": [
@@ -142,12 +149,12 @@
      "output_type": "stream",
      "text": [
       "[{'params': [Parameter containing:\n",
-      "tensor([[ 2.2627, -1.9063],\n",
-      "        [-4.0453,  4.0453],\n",
-      "        [-1.9786,  2.4116]], requires_grad=True), Parameter containing:\n",
-      "tensor([-3.4926e-05, -1.2271e-04,  1.9787e+00], requires_grad=True), Parameter containing:\n",
-      "tensor([[ 2.9358,  5.7194, -3.6245]], requires_grad=True), Parameter containing:\n",
-      "tensor([0.3238], requires_grad=True)], 'lr': 0.1, 'momentum': 0, 'dampening': 0, 'weight_decay': 0, 'nesterov': False, 'maximize': False, 'foreach': None, 'differentiable': False, 'fused': None}]\n"
+      "tensor([[-0.3157, -0.1940],\n",
+      "        [-0.4629, -0.0948],\n",
+      "        [-0.5312,  0.0254]], requires_grad=True), Parameter containing:\n",
+      "tensor([0.5748, 0.5537, 0.4656], requires_grad=True), Parameter containing:\n",
+      "tensor([[ 0.0376, -0.2596, -0.1503]], requires_grad=True), Parameter containing:\n",
+      "tensor([0.5750], requires_grad=True)], 'lr': 0.1, 'momentum': 0, 'dampening': 0, 'weight_decay': 0, 'nesterov': False, 'maximize': False, 'foreach': None, 'differentiable': False, 'fused': None}]\n"
      ]
     }
    ],
@@ -159,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 259,
    "id": "08981803",
    "metadata": {},
    "outputs": [
@@ -167,21 +174,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: Loss = 0.001492\n",
-      "Epoch 200: Loss = 0.001413\n",
-      "Epoch 400: Loss = 0.001341\n",
-      "Epoch 600: Loss = 0.001275\n",
-      "Epoch 800: Loss = 0.001215\n",
-      "Epoch 1000: Loss = 0.001160\n",
-      "Epoch 1200: Loss = 0.001110\n",
-      "Epoch 1400: Loss = 0.001063\n",
-      "Epoch 1600: Loss = 0.001020\n",
-      "Epoch 1800: Loss = 0.000980\n",
-      "Epoch 2000: Loss = 0.000943\n",
-      "Epoch 2200: Loss = 0.000908\n",
-      "Epoch 2400: Loss = 0.000876\n",
-      "Epoch 2600: Loss = 0.000845\n",
-      "Epoch 2800: Loss = 0.000817\n"
+      "Epoch 0: Loss = 0.722914\n",
+      "Epoch 200: Loss = 0.570865\n",
+      "Epoch 400: Loss = 0.446117\n",
+      "Epoch 600: Loss = 0.286559\n",
+      "Epoch 800: Loss = 0.157592\n",
+      "Epoch 1000: Loss = 0.094327\n",
+      "Epoch 1200: Loss = 0.062523\n",
+      "Epoch 1400: Loss = 0.044896\n",
+      "Epoch 1600: Loss = 0.034369\n",
+      "Epoch 1800: Loss = 0.027645\n",
+      "Epoch 2000: Loss = 0.022946\n",
+      "Epoch 2200: Loss = 0.019531\n",
+      "Epoch 2400: Loss = 0.016911\n",
+      "Epoch 2600: Loss = 0.014880\n",
+      "Epoch 2800: Loss = 0.013243\n"
      ]
     }
    ],
@@ -203,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 260,
    "id": "dc94b212",
    "metadata": {},
    "outputs": [
@@ -211,12 +218,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name net.0.weight : params: tensor([[ 2.2627, -1.9063],\n",
-      "        [-4.0453,  4.0453],\n",
-      "        [-1.9786,  2.4116]])\n",
-      "name net.0.bias : params: tensor([-3.4926e-05, -1.2271e-04,  1.9787e+00])\n",
-      "name net.2.weight : params: tensor([[ 2.9358,  5.7194, -3.6245]])\n",
-      "name net.2.bias : params: tensor([0.3238])\n"
+      "name net.0.weight : params: tensor([[-1.8757, -1.8758],\n",
+      "        [-2.8742, -2.8735],\n",
+      "        [-1.6994, -1.6998]])\n",
+      "name net.0.bias : params: tensor([3.7531, 2.8730, 1.6992])\n",
+      "name net.2.weight : params: tensor([[ 4.5178, -4.9213, -2.8574]])\n",
+      "name net.2.bias : params: tensor([-3.4994])\n"
      ]
     }
    ],
@@ -227,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 261,
    "id": "34eee601",
    "metadata": {},
    "outputs": [
@@ -237,10 +244,10 @@
      "text": [
       "\n",
       "Predictions:\n",
-      "Input: [0.0, 0.0] -> Prediction: 0.0011\n",
-      "Input: [0.0, 1.0] -> Prediction: 0.9995\n",
-      "Input: [1.0, 0.0] -> Prediction: 0.9991\n",
-      "Input: [1.0, 1.0] -> Prediction: 0.0006\n"
+      "Input: [0.0, 0.0] -> Prediction: 0.0039\n",
+      "Input: [0.0, 1.0] -> Prediction: 0.9932\n",
+      "Input: [1.0, 0.0] -> Prediction: 0.9932\n",
+      "Input: [1.0, 1.0] -> Prediction: 0.0295\n"
      ]
     }
    ],
@@ -253,6 +260,14 @@
     "    for inp, pred in zip(X, preds):\n",
     "        print(f\"Input: {inp.tolist()} -> Prediction: {pred.item():.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d4db9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
